<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainJogoVelha</class>
 <widget class="QMainWindow" name="MainJogoVelha">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>280</width>
    <height>184</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Jogo da Velha</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <widget class="QLabel" name="jogadorVez">
    <property name="geometry">
     <rect>
      <x>190</x>
      <y>5</y>
      <width>81</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Jogador da vez:</string>
    </property>
   </widget>
   <widget class="QLabel" name="imgVez">
    <property name="geometry">
     <rect>
      <x>190</x>
      <y>23</y>
      <width>40</width>
      <height>40</height>
     </rect>
    </property>
    <property name="frameShape">
     <enum>QFrame::Box</enum>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QLabel" name="jogadorVencedor">
    <property name="geometry">
     <rect>
      <x>190</x>
      <y>76</y>
      <width>47</width>
      <height>13</height>
     </rect>
    </property>
    <property name="text">
     <string>Vencedor:</string>
    </property>
   </widget>
   <widget class="QLabel" name="imgVencedor">
    <property name="geometry">
     <rect>
      <x>190</x>
      <y>92</y>
      <width>40</width>
      <height>40</height>
     </rect>
    </property>
    <property name="frameShape">
     <enum>QFrame::Box</enum>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QTableView" name="jogoVelha">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>10</y>
      <width>122</width>
      <height>122</height>
     </rect>
    </property>
    <property name="editTriggers">
     <set>QAbstractItemView::NoEditTriggers</set>
    </property>
    <property name="tabKeyNavigation">
     <bool>false</bool>
    </property>
    <property name="showDropIndicator" stdset="0">
     <bool>false</bool>
    </property>
    <property name="selectionMode">
     <enum>QAbstractItemView::NoSelection</enum>
    </property>
    <attribute name="horizontalHeaderVisible">
     <bool>false</bool>
    </attribute>
    <attribute name="horizontalHeaderMinimumSectionSize">
     <number>40</number>
    </attribute>
    <attribute name="horizontalHeaderDefaultSectionSize">
     <number>40</number>
    </attribute>
    <attribute name="verticalHeaderVisible">
     <bool>false</bool>
    </attribute>
    <attribute name="verticalHeaderMinimumSectionSize">
     <number>40</number>
    </attribute>
    <attribute name="verticalHeaderDefaultSectionSize">
     <number>40</number>
    </attribute>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>280</width>
     <height>22</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuReiniciar">
    <property name="title">
     <string>Jogo</string>
    </property>
    <addaction name="actionReiniciar"/>
    <addaction name="separator"/>
    <addaction name="actionSair"/>
   </widget>
   <addaction name="menuReiniciar"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="actionReiniciar">
   <property name="text">
    <string>Reiniciar</string>
   </property>
  </action>
  <action name="actionSair">
   <property name="text">
    <string>Sair</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
